feat: added assets and favicon

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Invoice application"
     />
+    <link rel="icon" href="./assets/favicon-32x32.png">
     <title>Invoice App</title>
   </head>
   <body>
